--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 /*
- * Copyright 2021 Szymon Micyk
+ * Copyright 2022 Szymon Micyk
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -54,15 +54,18 @@ java {
 dependencies {
     implementation('org.codehaus.groovy:groovy-all:3.0.7')
 
-    implementation('org.apache.jmeter:ApacheJMeter_core:5.4.2')
-    implementation('org.apache.jmeter:ApacheJMeter_java:5.4.2')
-    implementation('org.apache.jmeter:ApacheJMeter_components:5.4.2')
-    implementation('org.apache.jmeter:ApacheJMeter_http:5.4.2')
-    implementation('org.apache.jmeter:ApacheJMeter_functions:5.4.2')
-    implementation('org.apache.jmeter:ApacheJMeter_config:5.4.2')
-    implementation('org.apache.jmeter:ApacheJMeter_jdbc:5.4.2')
+    implementation('org.apache.jmeter:ApacheJMeter_core:5.4.3')
+    implementation('org.apache.jmeter:ApacheJMeter_java:5.4.3')
+    implementation('org.apache.jmeter:ApacheJMeter_components:5.4.3')
+    implementation('org.apache.jmeter:ApacheJMeter_http:5.4.3')
+    implementation('org.apache.jmeter:ApacheJMeter_functions:5.4.3')
+    implementation('org.apache.jmeter:ApacheJMeter_config:5.4.3')
+    implementation('org.apache.jmeter:ApacheJMeter_jdbc:5.4.3')
 
-    implementation('org.apache.httpcomponents:httpclient:4.5.12')
+    implementation('com.thoughtworks.xstream:xstream:1.4.19')
+
+
+    implementation('org.apache.httpcomponents:httpclient:4.5.13')
     implementation('info.picocli:picocli:4.6.1')
     implementation('info.picocli:picocli-groovy:4.6.1')
 
